--- a/app/src/main/res/layout/user_patient_items.xml
+++ b/app/src/main/res/layout/user_patient_items.xml
@@ -54,7 +54,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/patient_creation_date"
+            android:id="@+id/patient_birthdate_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -64,7 +64,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/patient_creation_id"
+            android:id="@+id/patient_birthdate_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -72,5 +72,28 @@
             android:text="@string/_1234"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/patient_university_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/university"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/patient_university_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/_1234"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textStyle="bold" />
+
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
+
