--- a/app/src/main/res/menu/sos_bar.xml
+++ b/app/src/main/res/menu/sos_bar.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/note_button"
+        android:icon="@drawable/ic_note"
+        android:title="note"
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/sos_button"
         android:icon="@drawable/ic_sos_icon"
-        android:title="item1"
+        android:title="sos"
         app:showAsAction="always" />
 
 </menu>
