--- a/app/src/main/res/layout/act_clinical_test.xml
+++ b/app/src/main/res/layout/act_clinical_test.xml
@@ -8,6 +8,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
