--- a/app/src/main/res/menu/sos_bar.xml
+++ b/app/src/main/res/menu/sos_bar.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/note_button"
-        android:icon="@drawable/ic_note"
+        android:icon="@drawable/ic_comment_light"
         android:title="note"
         app:showAsAction="always" />
 
