--- a/app/src/main/res/values/string_array_collection.xml
+++ b/app/src/main/res/values/string_array_collection.xml
@@ -100,6 +100,7 @@
         <item> post Op </item>
         <item> Follow Up 3M </item>
         <item> Follow Up 6M </item>
+        <item> Follow Up 9M </item>
         <item> Follow Up 12M </item>
     </string-array>
 
